--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   test:
     name: Test
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.11
@@ -17,9 +17,10 @@ jobs:
         with:
           java-version: 1.11
       - name: Build and test with Maven
-        run: ./mvnw clean install
+        run: mvn clean install
   build:
     name: Build
+    needs: test
     runs-on: ubuntu-latest
     env:
       DIRNAME: myapp
@@ -33,6 +34,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Set up JDK 1.11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.11
       - name: Create and move files into $DIRNAME
         run: |
           mkdir $DIRNAME
@@ -51,7 +56,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Install 'cdk' command
         run: npm i -g aws-cdk
-      - name: See directory structure
-        run: cd $CDK_INFRASTRUCTURE_REPO && ls
+      - name: Clean install Spring Boot app for Dockerization
+        run: cd $CDK_INFRASTRUCTURE_REPO/$DIRNAME && mvn clean install
       - name: cdk deploy
-        run: cd $CDK_INFRASTRUCTURE_REPO && cdk deploy --context stackName=$STACK_NAME --context clusterName=$CLUSTER_NAME --context serviceName=$SERVICE_NAME --context assetFolder=$DIRNAME --require-approval never
+        run: cd $CDK_INFRASTRUCTURE_REPO && cdk deploy --context stackName=$STACK_NAME --context clusterName=$CLUSTER_NAME --context serviceName=$SERVICE_NAME --context assetFolder=$DIRNAME --context port=$PORT_NUMBER --require-approval never
